// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blog plugin works on blog tags without pagination 1`] = `
Object {
  "/blog/tags/tag-1": Object {
    "items": Array [
      "/simple/slug/another",
      "/another/tags",
      "/another/tags2",
    ],
    "name": "tag1",
    "pages": Array [
      Object {
        "items": Array [
          "/simple/slug/another",
          "/another/tags",
          "/another/tags2",
        ],
        "metadata": Object {
          "blogDescription": "Blog",
          "blogTitle": "Blog",
          "nextPage": null,
          "page": 1,
          "permalink": "/blog/tags/tag-1",
          "postsPerPage": 3,
          "previousPage": null,
          "totalCount": 3,
          "totalPages": 1,
        },
      },
    ],
    "permalink": "/blog/tags/tag-1",
  },
  "/blog/tags/tag-2": Object {
    "items": Array [
      "/another/tags",
      "/another/tags2",
    ],
    "name": "tag2",
    "pages": Array [
      Object {
        "items": Array [
          "/another/tags",
          "/another/tags2",
        ],
        "metadata": Object {
          "blogDescription": "Blog",
          "blogTitle": "Blog",
          "nextPage": null,
          "page": 1,
          "permalink": "/blog/tags/tag-2",
          "postsPerPage": 2,
          "previousPage": null,
          "totalCount": 2,
          "totalPages": 1,
        },
      },
    ],
    "permalink": "/blog/tags/tag-2",
  },
}
`;

exports[`blog plugin works with blog tags 1`] = `
Object {
  "/blog/tags/tag-1": Object {
    "items": Array [
      "/simple/slug/another",
      "/another/tags",
      "/another/tags2",
    ],
    "name": "tag1",
    "pages": Array [
      Object {
        "items": Array [
          "/simple/slug/another",
          "/another/tags",
        ],
        "metadata": Object {
          "blogDescription": "Blog",
          "blogTitle": "Blog",
          "nextPage": "/blog/tags/tag-1/page/2",
          "page": 1,
          "permalink": "/blog/tags/tag-1",
          "postsPerPage": 2,
          "previousPage": null,
          "totalCount": 3,
          "totalPages": 2,
        },
      },
      Object {
        "items": Array [
          "/another/tags2",
        ],
        "metadata": Object {
          "blogDescription": "Blog",
          "blogTitle": "Blog",
          "nextPage": null,
          "page": 2,
          "permalink": "/blog/tags/tag-1/page/2",
          "postsPerPage": 2,
          "previousPage": "/blog/tags/tag-1",
          "totalCount": 3,
          "totalPages": 2,
        },
      },
    ],
    "permalink": "/blog/tags/tag-1",
  },
  "/blog/tags/tag-2": Object {
    "items": Array [
      "/another/tags",
      "/another/tags2",
    ],
    "name": "tag2",
    "pages": Array [
      Object {
        "items": Array [
          "/another/tags",
          "/another/tags2",
        ],
        "metadata": Object {
          "blogDescription": "Blog",
          "blogTitle": "Blog",
          "nextPage": null,
          "page": 1,
          "permalink": "/blog/tags/tag-2",
          "postsPerPage": 2,
          "previousPage": null,
          "totalCount": 2,
          "totalPages": 1,
        },
      },
    ],
    "permalink": "/blog/tags/tag-2",
  },
}
`;
